--- a/Client_App/Views/Forms/Forms4/Form_41.axaml
+++ b/Client_App/Views/Forms/Forms4/Form_41.axaml
@@ -4,18 +4,18 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="clr-namespace:Client_App.ViewModels.Forms.Forms1"
+    xmlns:vm="clr-namespace:Client_App.ViewModels.Forms.Forms4"
     xmlns:converter="clr-namespace:Client_App.VisualRealization.Converters"
 	xmlns:local="using:Client_App.Behaviors"
 	xmlns:interactivity="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
-    xmlns:forms1="clr-namespace:Models.Forms.Form1;assembly=Models"
+    xmlns:forms4="clr-namespace:Models.Forms.Form4;assembly=Models"
     xmlns:forms="clr-namespace:Models.Forms;assembly=Models"
 	xmlns:behaviors="using:Avalonia.Xaml.Interactions.Core"
 	xmlns:controls="clr-namespace:Client_App.Controls"
     Title="Форма 4.1"
     d:DesignHeight="450"
     d:DesignWidth="900"
-    x:DataType="vm:Form_11VM"
+    x:DataType="vm:Form_41VM"
     mc:Ignorable="d"
 	x:Name="4.1"
 	WindowStartupLocation="CenterScreen"
@@ -28,7 +28,7 @@
 	</Window.Resources>
 
 	<Design.DataContext>
-		<vm:Form_11VM/>
+		<vm:Form_41VM/>
 	</Design.DataContext>
 
 	<Grid>
@@ -121,7 +121,7 @@
 			<Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
 				<Grid.ContextMenu>
 					<ContextMenu x:CompileBindings="True"
-                                 x:DataType="vm:Form_11VM"
+                                 x:DataType="vm:Form_41VM"
                                  DataContext="{Binding DataContext, ElementName=dataGrid}">
 						<MenuItem Header="Выделить всё"
                                   Command="{Binding SelectAll}"
@@ -239,7 +239,7 @@
 						<DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
 											Width="40"
 											IsReadOnly="True"
-											x:DataType="forms1:Form11">
+											x:DataType="forms4:Form41">
 							<DataGridTextColumn.HeaderTemplate>
 								<DataTemplate>
 									<Border Classes="headerTemplate">
@@ -269,8 +269,8 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:DataType="forms1:Form11">
-									<TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
+								<DataTemplate x:DataType="forms4:Form41">
+									<TextBox Text="{Binding RegNo.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -287,10 +287,8 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:DataType="forms1:Form11">
-									<Grid ColumnDefinitions="*,Auto">
-										<TextBox Grid.Column="0" Text="{Binding OperationDate.Value, Mode=TwoWay}"/>
-									</Grid>
+								<DataTemplate x:DataType="forms4:Form41">
+									<TextBox Text="{Binding Okpo.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -308,8 +306,8 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:DataType="forms1:Form11">
-									<TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
+								<DataTemplate x:DataType="forms4:Form41">
+									<TextBox Text="{Binding OrganizationName.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -327,8 +325,8 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:DataType="forms1:Form11">
-									<TextBox Text="{Binding Type.Value, Mode=TwoWay}"/>
+								<DataTemplate x:DataType="forms4:Form41">
+									<TextBox Text="{Binding LicenseOrRegistrationInfo.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -346,8 +344,8 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:DataType="forms1:Form11">
-									<TextBox Text="{Binding Radionuclids.Value, Mode=TwoWay}"/>
+								<DataTemplate x:DataType="forms4:Form41">
+									<TextBox Text="{Binding NumOfFormsWithInventarizationInfo.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -365,8 +363,8 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:DataType="forms1:Form11">
-									<TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"/>
+								<DataTemplate x:DataType="forms4:Form41">
+									<TextBox Text="{Binding NumOfFormsWithoutInventarizationInfo.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -384,8 +382,8 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:DataType="forms1:Form11">
-									<TextBox Text="{Binding Quantity.Value, Mode=TwoWay}"/>
+								<DataTemplate x:DataType="forms4:Form41">
+									<TextBox Text="{Binding NumOfForms212.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -403,8 +401,8 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:DataType="forms1:Form11">
-									<TextBox Text="{Binding Activity.Value, Mode=TwoWay}"/>
+								<DataTemplate x:DataType="forms4:Form41">
+									<TextBox Text="{Binding Note.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
