fix  copy / Paste rows && code 41

--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -402,8 +402,7 @@
 
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate x:DataType="forms1:Form11">
-                                    <TextBox LostFocus="OperationCodeTextBox_OnLostFocus"
-                                             Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
+                                    <TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
