--- a/Client_App/Views/Forms/Forms1/Form_15.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_15.axaml
@@ -380,7 +380,8 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:DataType="forms1:Form15">
-									<TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
+									<TextBox LostFocus="OperationCodeTextBox_OnLostFocus"
+										     Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
