fix code 41 in form 1.5, 1.6

--- a/Client_App/Views/Forms/Forms1/Form_15.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_15.axaml
@@ -380,7 +380,8 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:DataType="forms1:Form15">
-									<TextBox LostFocus="OperationCodeTextBox_OnLostFocus"
+									<TextBox GotFocus="OperationCodeTextBox_OnGotFocus"
+											 LostFocus="OperationCodeTextBox_OnLostFocus"
 										     Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
