--- a/Client_App/Views/Forms/Forms1/Form_16.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_16.axaml
@@ -399,7 +399,8 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:DataType="forms1:Form16">
-									<TextBox LostFocus="OperationCodeTextBox_OnLostFocus"
+									<TextBox GotFocus="OperationCodeTextBox_OnGotFocus"
+											 LostFocus="OperationCodeTextBox_OnLostFocus"
 											 Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
