--- a/Client_App/Views/Forms/Forms1/Form_18.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_18.axaml
@@ -198,7 +198,7 @@
 				<Grid Classes="tableHeader" Grid.Row="0"
 					  Width="{Binding ElementName=dataGrid.Width}"
                       ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*"
-                      RowDefinitions="Auto,Auto">
+                      RowDefinitions="Auto,Auto,Auto">
 
                     <interactivity:Interaction.Behaviors>
 						<local:ColumnWidthSyncBehavior	SourceDataGrid="{Binding ElementName=dataGrid}"/>
@@ -236,94 +236,102 @@
 					<Border Grid.Column="28" Grid.Row="0">
 						<TextBlock>Договор</TextBlock>
 					</Border>
-
 					<!--Второй уровень заголовков-->
 
-					<Border Grid.Column="0" Grid.Row="1">
+					<Border Grid.Column="8" Grid.Row="1" Grid.ColumnSpan="2">
+						<TextBlock>Радионуклидный состав</TextBlock>
+					</Border>
+					<Border Grid.Column="21" Grid.Row="1" Grid.ColumnSpan="4">
+						<TextBlock>Суммарная активность, Бк</TextBlock>
+					</Border>
+					
+					<!--Третий уровень заголовков-->
+
+					<Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
 						<TextBlock>№ п/п</TextBlock>
 					</Border>
-					<Border Grid.Column="1" Grid.Row="1">
+					<Border Grid.Column="1" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>код</TextBlock>
 					</Border>
-					<Border Grid.Column="2" Grid.Row="1">
+					<Border Grid.Column="2" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>дата</TextBlock>
 					</Border>
-					<Border Grid.Column="3" Grid.Row="1">
+					<Border Grid.Column="3" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>индивидуальный номер (идентификационный код) партии ЖРО</TextBlock>
 					</Border>
-					<Border Grid.Column="4" Grid.Row="1">
+					<Border Grid.Column="4" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>номер паспорта</TextBlock>
 					</Border>
-					<Border Grid.Column="5" Grid.Row="1">
+					<Border Grid.Column="5" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>объем, куб. м</TextBlock>
 					</Border>
-					<Border Grid.Column="6" Grid.Row="1">
+					<Border Grid.Column="6" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>масса, т</TextBlock>
 					</Border>
-					<Border Grid.Column="7" Grid.Row="1">
+					<Border Grid.Column="7" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>солесодержание, г/л</TextBlock>
 					</Border>
-					<Border Grid.Column="8" Grid.Row="1">
+					<Border Grid.Column="8" Grid.Row="2">
 						<TextBlock>наименование радионуклида</TextBlock>
 					</Border>
-					<Border Grid.Column="9" Grid.Row="1">
+					<Border Grid.Column="9" Grid.Row="2">
 						<TextBlock>удельная активность, БК/г</TextBlock>
 					</Border>
-					<Border Grid.Column="10" Grid.Row="1">
+					<Border Grid.Column="10" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>вид</TextBlock>
 					</Border>
-					<Border Grid.Column="11" Grid.Row="1">
+					<Border Grid.Column="11" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>номер</TextBlock>
 					</Border>
-					<Border Grid.Column="12" Grid.Row="1">
+					<Border Grid.Column="12" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>дата</TextBlock>
 					</Border>
-					<Border Grid.Column="13" Grid.Row="1">
+					<Border Grid.Column="13" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>поставщика или получателя</TextBlock>
 					</Border>
-					<Border Grid.Column="14" Grid.Row="1">
+					<Border Grid.Column="14" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>перевозчика</TextBlock>
 					</Border>
-					<Border Grid.Column="15" Grid.Row="1">
+					<Border Grid.Column="15" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>наименование</TextBlock>
 					</Border>
-					<Border Grid.Column="16" Grid.Row="1">
+					<Border Grid.Column="16" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>код</TextBlock>
 					</Border>
-					<Border Grid.Column="17" Grid.Row="1">
+					<Border Grid.Column="17" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>код</TextBlock>
 					</Border>
-					<Border Grid.Column="18" Grid.Row="1">
+					<Border Grid.Column="18" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>статус</TextBlock>
 					</Border>
-					<Border Grid.Column="19" Grid.Row="1">
+					<Border Grid.Column="19" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>объем, куб. м</TextBlock>
 					</Border>
-					<Border Grid.Column="20" Grid.Row="1">
+					<Border Grid.Column="20" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>масса, т</TextBlock>
 					</Border>
-					<Border Grid.Column="21" Grid.Row="1">
+					<Border Grid.Column="21" Grid.Row="2">
 						<TextBlock>тритий</TextBlock>
 					</Border>
-					<Border Grid.Column="22" Grid.Row="1">
-						<TextBlock>бета-, гамма-излучающие радионуклиды (исключая</TextBlock>
+					<Border Grid.Column="22" Grid.Row="2">
+						<TextBlock>бета-, гамма-излучающие радионуклиды (исключая тритий)</TextBlock>
 					</Border>
-					<Border Grid.Column="23" Grid.Row="1">
-						<TextBlock>альфа-излучающие радионуклиды (исключая</TextBlock>
+					<Border Grid.Column="23" Grid.Row="2">
+						<TextBlock>альфа-излучающие радионуклиды (исключая трансурановые)</TextBlock>
 					</Border>
-					<Border Grid.Column="24" Grid.Row="1">
+					<Border Grid.Column="24" Grid.Row="2">
 						<TextBlock>трансурановые радионуклиды</TextBlock>
 					</Border>
-					<Border Grid.Column="25" Grid.Row="1">
+					<Border Grid.Column="25" Grid.Row="1" Grid.RowSpan="2">
 						<TextBlock>код переработки/сортировки РАО</TextBlock>
 					</Border>
-					<Border Grid.Column="26" Grid.Row="1">
+					<Border Grid.Column="26" Grid.Row="0" Grid.RowSpan="3">
 						<TextBlock>Субсидия, %</TextBlock>
 					</Border>
-					<Border Grid.Column="27" Grid.Row="1">
+					<Border Grid.Column="27" Grid.Row="0" Grid.RowSpan="3">
 						<TextBlock>Номер мероприятия ФЦП</TextBlock>
 					</Border>
-					<Border Grid.Column="28" Grid.Row="1">
+					<Border Grid.Column="28" Grid.Row="0" Grid.RowSpan="3">
 						<TextBlock>номер</TextBlock>
 					</Border>
 				</Grid>
