--- a/Client_App/Views/Forms/Forms1/Form_16.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_16.axaml
@@ -188,7 +188,7 @@
                         <MenuItem Header="Очистить строчки"
                                   Command="{Binding DeleteDataInRows}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+K"
+                                  InputGesture="Ctrl+U"
                                   IsVisible="{Binding AnyRowSelected}"/>
                     </ContextMenu>
 				</Grid.ContextMenu>
